--- a/TIL/day3 - 210929.md
+++ b/TIL/day3 - 210929.md
@@ -1,7 +1,3 @@
----
-typora-copy-images-to: ../Screenshots
----
-
 # 🟢 Day3 TIL 🟢
 
 ### ✔️ 버전 대응
@@ -10,7 +6,7 @@ typora-copy-images-to: ../Screenshots
 
    1. `AppDelegate` 파일을 확인해보면 버전 13 이후로 생긴 함수들에 대해 오류가 뜨고, `SceneDelegate`은 버전 13 때 생긴거라 모든 함수에서 에러가 뜬다.
 
-   <img src="/Users/yangjiyeong/ssac2021/Screenshots/version12error.png" alt="version12error" />
+   <img src="../Screenshots/version12error.png" alt="version12error" />
 
    
 
@@ -26,15 +22,15 @@ typora-copy-images-to: ../Screenshots
    @available(iOS 13.0, *)
    ```
 
-   ![appdelegate13](/Users/yangjiyeong/ssac2021/Screenshots/appdelegate13.png)
+   ![appdelegate13](../Screenshots/appdelegate13.png)
 
-   ![](/Users/yangjiyeong/ssac2021/Screenshots/scenedelegate13.png)
+   ![](../Screenshots/scenedelegate13.png)
 
    > Snippets 사용법
    >
    > * 원하는 코드 드래그 후 우클릭
    >
-   >   ![](/Users/yangjiyeong/ssac2021/Screenshots/snippets1.png)
+   >   ![](../Screenshots/snippets1.png)
 
    
 
@@ -60,7 +56,7 @@ typora-copy-images-to: ../Screenshots
 
 ### ✔️ ViewController LifeCycle ###
 
-​	![vclifecycle](/Users/yangjiyeong/ssac2021/Screenshots/vclifecycle.jpg)
+​	![vclifecycle](../Screenshots/vclifecycle.jpg)
 
 
 
@@ -108,7 +104,7 @@ typora-copy-images-to: ../Screenshots
 
 ## ✅ Day3 Assignment ##
 
-<img src="/Users/yangjiyeong/ssac2021/Screenshots/day3mission.PNG" alt="day3mission" style="zoom:20%;" />
+<img src="../Screenshots/day3mission.PNG" alt="day3mission" style="zoom:20%;" />
 
 
 
