--- a/TIL/day3 - 210929.md
+++ b/TIL/day3 - 210929.md
@@ -1,4 +1,18 @@
-# 🟢 Day3 TIL 🟢
+---
+typora-copy-images-to: ../Screenshots
+---
+
+# 🟢 Day3 TIL - 210929 🟢
+
+­­­­– [버전 대응](#✔️-버전-대응)
+
+– [Mac Catalyst](#✔️-Mac-Catalyst)
+
+– [ViewController LifeCycle](#✔️-ViewController-LifeCycle)
+
+– [iOS 계층구조](#✔️-iOS-계층구조)
+
+– [app icon & debugging 단축키](#❕Tips)
 
 ### ✔️ 버전 대응
 
@@ -10,7 +24,7 @@
 
    
 
-   2. 12.0 버전의 시뮬레이터로 빌드해보면 빌드는 되지만, 까만화면이 뜬다고 한다. (12.0 시뮬레이터를 다운받지 않아 캡쳐는 생략,,)
+   2. 12.0 버전의 시뮬레이터로 빌드해보면 빌드는 되지만, 까만화면이 뜬다고 한다. 
 
    
 
@@ -56,7 +70,7 @@
 
 ### ✔️ ViewController LifeCycle ###
 
-​	![vclifecycle](../Screenshots/vclifecycle.jpg)
+​	<img src="../Screenshots/vclifecycle.jpg" alt="vclifecycle" style="zoom:50%;" />
 
 
 
@@ -92,37 +106,17 @@
 
 
 
+
+
 #### ❕Tips  ####
 
-[AppIcon 만들어 주는 곳](https://appicon.co)
+* [AppIcon 만들어 주는 곳](https://appicon.co)
 
-
-
-***
-
-
-
-## ✅ Day3 Assignment ##
-
-<img src="../Screenshots/day3mission.PNG" alt="day3mission" style="zoom:20%;" />
-
-
-
-> 1. viewDidLoad에서 하단 3개의 이미지뷰에 대한 cornerRadius, borderColor, borderWidth 설정하기
->
-> 2. viewDidLoad에서 4개 이미지뷰에 포스터 이미지를 랜덤으로 보여주기 
->
-> 3. @IBAction에서 4개 이미지뷰에 포스터 이미지를 랜덤으로 보여주기 => 즉, 앱이 실행될 때마다, 버튼이 클릭될 때마다 포스터 이미지가 변경
-
-
-
-
-
-
-
-
-
-
+* 디버깅 단축키 정리  ~~(Fn키는 설정에서 변경)~~
+  * ctrl + cmd + y : 다음 브레이크포인트로 이동
+  * F6 : 한줄 한줄 내려가면서 디버깅
+  * F7 : 함수 안쪽으로 이동
+  * F8 : 현재 함수 빠져 나옴
 
 
 
