--- a/TIL/day3 - 210929.md
+++ b/TIL/day3 - 210929.md
@@ -1,18 +1,14 @@
----
-typora-copy-images-to: ../Screenshots
----
-
 # 🟢 Day3 TIL - 210929 🟢
 
-­­­­– [버전 대응](#✔️-버전-대응)
+­­­­– [버전 대응](#버전-대응)
 
-– [Mac Catalyst](#✔️-Mac-Catalyst)
+– [Mac Catalyst](#Mac-Catalyst)
 
-– [ViewController LifeCycle](#✔️-ViewController-LifeCycle)
+– [ViewController LifeCycle](#ViewController-LifeCycle)
 
-– [iOS 계층구조](#✔️-iOS-계층구조)
+– [iOS 계층구조](#iOS-계층구조)
 
-– [app icon & debugging 단축키](#❕Tips)
+– [app icon & debugging 단축키](#Tips)
 
 ### ✔️ 버전 대응
 
@@ -117,6 +113,8 @@ typora-copy-images-to: ../Screenshots
   * F6 : 한줄 한줄 내려가면서 디버깅
   * F7 : 함수 안쪽으로 이동
   * F8 : 현재 함수 빠져 나옴
+  * lldb p : 기존 변수 찍어볼때
+  * lldb expr : 새로운 변수 넣어볼 때 
 
 
 
