--- a/TIL/day3 - 210929.md
+++ b/TIL/day3 - 210929.md
@@ -1,14 +1,20 @@
 # 🟢 Day3 TIL - 210929 🟢
 
-­­­­– [버전 대응](#버전-대응)
+▶︎ [버전 대응](#버전-대응)
 
-– [Mac Catalyst](#Mac-Catalyst)
+▶︎ [Mac Catalyst](#Mac-Catalyst)
 
-– [ViewController LifeCycle](#ViewController-LifeCycle)
+▶︎ [ViewController LifeCycle](#ViewController-LifeCycle)
 
-– [iOS 계층구조](#iOS-계층구조)
+▶︎ [iOS 계층구조](#iOS-계층구조)
 
-– [app icon & debugging 단축키](#Tips)
+▶︎ [app icon & debugging 단축키](#Tips)
+
+
+
+***
+
+
 
 ### ✔️ 버전 대응
 
@@ -20,9 +26,9 @@
 
    
 
-   2. 12.0 버전의 시뮬레이터로 빌드해보면 빌드는 되지만, 까만화면이 뜬다고 한다. 
+   2. 12.0 버전의 시뮬레이터로 빌드해보면 빌드는 되지만, 까만화면이 뜬다고 한다.  
 
-   
+
 
  - **해결방법**
 
@@ -54,6 +60,8 @@
    
    ```
 
+  
+
 
 
 ### ✔️ Mac Catalyst ###
@@ -61,6 +69,8 @@
 * `Mac Catalyst` 를 사용하면 iPad앱을 Mac앱으로 쉽게 전환가능하다. (iPhone 앱은 불가능)
 * 기존에는 AppKit, UIKit, TVUIKit, WatchKit 프레임워크로 각각 개발하였는데, 이를 모두 합친 것이 `SwiftUI` 이다. M1칩 이후 더 많이 사용될 것이라고 한다.
 * 어쨌든, M1칩 이후 ` Apple Sillicon Mac` 이 나와서 이 또한 과거이야기라고,,
+
+  
 
 
 
@@ -91,6 +101,8 @@
 8. __viewDidUnload__
    * View가 메모리에서 해제된 뒤 호출
 
+  
+
 
 
 ### ✔️ iOS 계층구조 ###
@@ -100,9 +112,9 @@
 * **Core Service** : GPS, 센서, 가속도 등 기기 자체 움직임이나 하드웨어 특성에 기반한 서비스 제공
 * **Core OS** : 배터리, 전워 관리 등 하드웨어와 가까이 있는 최하위 계층
 
+  
 
-
-
+  
 
 #### ❕Tips  ####
 
