--- a/TIL/day3 - 210929.md
+++ b/TIL/day3 - 210929.md
@@ -28,7 +28,7 @@
 
    2. 12.0 버전의 시뮬레이터로 빌드해보면 빌드는 되지만, 까만화면이 뜬다고 한다.  
 
-
+<br>
 
  - **해결방법**
 
@@ -60,9 +60,9 @@
    
    ```
 
-  
+ <br>
 
-
+<br>
 
 ### ✔️ Mac Catalyst ###
 
@@ -70,11 +70,13 @@
 * 기존에는 AppKit, UIKit, TVUIKit, WatchKit 프레임워크로 각각 개발하였는데, 이를 모두 합친 것이 `SwiftUI` 이다. M1칩 이후 더 많이 사용될 것이라고 한다.
 * 어쨌든, M1칩 이후 ` Apple Sillicon Mac` 이 나와서 이 또한 과거이야기라고,,  
 
-# 
+ <br>
+
+<br>
 
 ### ✔️ ViewController LifeCycle ###
 
-​	<img src="../Screenshots/vclifecycle.jpg" alt="vclifecycle" style="zoom:30%;" />
+​	<img src="../Screenshots/vclifecycle.jpg" alt="vclifecycle" height="30%" width="30%;" />
 
 
 
@@ -99,9 +101,9 @@
 8. __viewDidUnload__
    * View가 메모리에서 해제된 뒤 호출
 
-  
+ <br>
 
-
+<br>
 
 ### ✔️ iOS 계층구조 ###
 
@@ -110,11 +112,13 @@
 * **Core Service** : GPS, 센서, 가속도 등 기기 자체 움직임이나 하드웨어 특성에 기반한 서비스 제공
 * **Core OS** : 배터리, 전워 관리 등 하드웨어와 가까이 있는 최하위 계층
 
-  
+ <br>
 
-  
+<br>
 
-#### ❕Tips  ####
+<br>
+
+### ❕Tips ###
 
 * [AppIcon 만들어 주는 곳](https://appicon.co)
 
