--- a/TIL/day3 - 210929.md
+++ b/TIL/day3 - 210929.md
@@ -8,7 +8,7 @@
 
 ▶︎ [iOS 계층구조](#iOS-계층구조)
 
-▶︎ [app icon & debugging](#Tips)
+▶︎ [Xcode Tips: Debugging](#Xcode Tips)
 
 
 
@@ -118,9 +118,7 @@
 
 <br>
 
-### ❕Tips ###
-
-* [AppIcon 만들어 주는 곳](https://appicon.co)
+### ❕Xcode Tips ###
 
 * 디버깅 단축키 정리  ~~(Fn키는 설정에서 변경)~~
   * ctrl + cmd + y : 다음 브레이크포인트로 이동
