--- a/TIL/day4-210930.md
+++ b/TIL/day4-210930.md
@@ -8,7 +8,7 @@
 
 ▶︎ [Tap Gesture Recognizer](#Tap-Gesture-Recognizer)
 
-▶︎ [Xcode Tips: playground, 자동완성창 읽기](#Xcode Tips)
+▶︎ [Xcode Tips: playground, 자동완성창 읽기](#Xcode-Tips)
 
 
 
