--- a/TIL/day5-211001.md
+++ b/TIL/day5-211001.md
@@ -1,6 +1,10 @@
+---
+typora-copy-images-to: ../Screenshots
+---
+
 # 🟢 Day5 TIL - 211001 🟢
 
-▶︎ [다크 모드](#다크-모드)
+▶︎ [다크 모드 대응](#다크-모드-대응)
 
 ▶︎ [외부 매개변수와 내부 매개변수](#외부-매개변수와-내부-매개변수)
 
@@ -12,13 +16,23 @@
 
 
 
-### ✔️ 다크 모드
+### ✔️ 다크 모드 대응
+
+* Info.plist 파일에 `Appearance` 추가
+  * Light 
+  * Dark
+
+<img src="../Screenshots/infoAppearance.png" alt="infoAppearance" height="70%" width="70%;" />
 
 <br>
 
 <br>
 
 ### ✔️ 외부 매개변수와 내부 매개변수
+
+* **외부 매개변수** : 
+
+<img src="../Screenshots/paramsname-3064482.jpg" alt="paramsname" height="50%" width="50%;" />
 
 <br>
 
