--- a/TIL/day5-211001.md
+++ b/TIL/day5-211001.md
@@ -1,6 +1,4 @@
----
-typora-copy-images-to: ../Screenshots
----
+
 
 # 🟢 Day5 TIL - 211001 🟢
 
@@ -10,7 +8,7 @@ typora-copy-images-to: ../Screenshots
 
 ▶︎ [와일드 카드 식별자](#와일드-카드-식별자)
 
-▶︎ [Xcode Tips: AutoLayout, Attributes Inspector](#Xcode-Tips)
+▶︎ [Xcode Tips: AutoLayout 단축키, Attributes Inspector 구조](#Xcode-Tips)
 
 ***
 
@@ -30,9 +28,10 @@ typora-copy-images-to: ../Screenshots
 
 ### ✔️ 외부 매개변수와 내부 매개변수
 
-* **외부 매개변수** : 
+* 외부 매개변수: 전달인자 레이블(Argument label)
+* 내부 매개변수:  매개변수 이름(Parameter Name)
 
-<img src="../Screenshots/paramsname-3064482.jpg" alt="paramsname" height="50%" width="50%;" />
+<img src="/Users/yangjiyeong/ssac2021/Screenshots/methodparams.png" alt="methodparams" height="70%" width="70%;" />
 
 <br>
 
@@ -40,9 +39,25 @@ typora-copy-images-to: ../Screenshots
 
 ### ✔️ 와일드 카드 식별자
 
+* 외부 매개변수 이름 생략 가능
+
+  <img src="../Screenshots/wildcard.png" alt="wildcard" height="70%" width="70%;" />
+
+⭐️ 매개변수에 기본값을 포함하는 경우 `Overloading` 가능
+
+<img src="../Screenshots/overloading-3076395.png" alt="overloading" height="70%" width="70%;" />
+
 <br>
 
 <br><br>
 
 ### 💡 Xcode Tips
+
+* AutoLayout 단축키
+
+  * 커서를 선 위에 올리고 `option`키 누르면 레이아웃값 확인 가능
+
+* Attributes Inspector 구조
+
+  <img src="../Screenshots/inspector.jpeg" alt="inspector" height="30%" width="30%;" />
 
