--- a/TIL/day5-211001.md
+++ b/TIL/day5-211001.md
@@ -2,7 +2,7 @@
 
 # 🟢 Day5 TIL - 211001 🟢
 
-▶︎ [다크 모드 대응](#다크-모드-대응)
+▶︎ [다크모드 대응](#다크모드-대응)
 
 ▶︎ [외부 매개변수와 내부 매개변수](#외부-매개변수와-내부-매개변수)
 
@@ -14,7 +14,7 @@
 
 
 
-### ✔️ 다크 모드 대응
+### ✔️ 다크모드 대응 ###
 
 * Info.plist 파일에 `Appearance` 추가
   * Light 
@@ -26,7 +26,7 @@
 
 <br>
 
-### ✔️ 외부 매개변수와 내부 매개변수
+### ✔️ 외부 매개변수와 내부 매개변수 ###
 
 * 외부 매개변수: 전달인자 레이블(Argument label)
 * 내부 매개변수:  매개변수 이름(Parameter Name)
@@ -37,7 +37,7 @@
 
 <br>
 
-### ✔️ 와일드 카드 식별자
+### ✔️ 와일드 카드 식별자 ###
 
 * 외부 매개변수 이름 생략 가능
 
@@ -51,7 +51,7 @@
 
 <br><br>
 
-### 💡 Xcode Tips
+### 💡 Xcode Tips ###
 
 * AutoLayout 단축키
 
