--- a/TIL/day5-211001.md
+++ b/TIL/day5-211001.md
@@ -31,7 +31,7 @@
 * 외부 매개변수: 전달인자 레이블(Argument label)
 * 내부 매개변수:  매개변수 이름(Parameter Name)
 
-<img src="/Users/yangjiyeong/ssac2021/Screenshots/methodparams.png" alt="methodparams" height="70%" width="70%;" />
+<img src="../Screenshots/methodparams.png" alt="methodparams" height="70%" width="70%;" />
 
 <br>
 
