--- a/TIL/day3-210929.md
+++ b/TIL/day3-210929.md
@@ -1,14 +1,14 @@
 # 🟢 Day3 TIL - 210929 🟢
 
-▶︎ [버전 대응](#버전-대응)
+▶︎ [버전 대응](#️-버전-대응)
 
-▶︎ [Mac Catalyst](#Mac-Catalyst)
+▶︎ [Mac Catalyst](#️-mac-catalyst)
 
-▶︎ [ViewController LifeCycle](#ViewController-LifeCycle)
+▶︎ [ViewController LifeCycle](#️-viewcontroller-lifecycle)
 
-▶︎ [iOS 계층구조](#iOS-계층구조)
+▶︎ [iOS 계층구조](#️-ios-계층구조)
 
-▶︎ [Xcode Tips: Debugging](#Xcode-Tips)
+▶︎ [Xcode Tips: Debugging](#xcode-tips)
 
 
 
