--- a/TIL/day4-210930.md
+++ b/TIL/day4-210930.md
@@ -1,14 +1,14 @@
 # 🟢 Day4 TIL - 210930 🟢
 
-▶︎ [옵셔널](#옵셔널)
+▶︎ [옵셔널](#️-옵셔널)
 
-▶︎ [Dictionary](#Dictionary)
+▶︎ [Dictionary](#️-dictionary)
 
-▶︎ [Set](#Set)
+▶︎ [Set](#️-set)
 
-▶︎ [Tap Gesture Recognizer](#Tap-Gesture-Recognizer)
+▶︎ [Tap Gesture Recognizer](#️-tap-gesture-recognizer)
 
-▶︎ [Xcode Tips: playground, 자동완성창 읽기](#Xcode-Tips)
+▶︎ [Xcode Tips: playground, 자동완성창 읽기](#-xcode-tips)
 
 
 
