--- a/TIL/day5-211001.md
+++ b/TIL/day5-211001.md
@@ -4,9 +4,9 @@
 
 ▶︎ [다크모드 대응](#️-다크모드-대응)
 
-▶︎ [외부 매개변수와 내부 매개변수](#-외부-매개변수와-내부-매개변수)
+▶︎ [외부 매개변수와 내부 매개변수](#️-외부-매개변수와-내부-매개변수)
 
-▶︎ [와일드 카드 식별자](#-와일드-카드-식별자)
+▶︎ [와일드 카드 식별자](#️-와일드-카드-식별자)
 
 ▶︎ [Xcode Tips: AutoLayout 단축키, Attributes Inspector 구조](#-xcode-tips)
 
