update README.md & Assignment

--- a/TIL/day4-210930.md
+++ b/TIL/day4-210930.md
@@ -1,3 +1,7 @@
+---
+typora-copy-images-to: ../Screenshots
+---
+
 # 🟢 Day4 TIL - 210930 🟢
 
 ▶︎ [옵셔널](#️-옵셔널)
@@ -26,7 +30,7 @@
 
 ### ✔️ Dictionary ###
 
-* 
+
 
  <br>
 
@@ -42,7 +46,7 @@
 
 ### ✔️ Tap Gesture Recognizer ###
 
-* 
+
 
  <br>
 
@@ -52,12 +56,55 @@
 
 ### 💡 Xcode Tips ###
 
-* playground 재생 단축키 : shift + Enter
+* playground 재생 단축키 : `shift` + `Enter`
 * Xcode 자동완성창 읽기
-  * P : 프로퍼티
-  * M : 메서드
-  * S : 구조체
-  * Pr : 프로토콜
+  * `P` : 프로퍼티
+  * `M` : 메서드
+  * `S` : 구조체
+  * `Pr` : 프로토콜
 
 
+
+### 🔥Mission ###
+
+##### 1. 비밀번호 입력 #####
+
+* 비밀번호 입력이 안된다. 한 글자만 입력되고 아래 그림과 같이 'Strong Password'와 함께 색이 변한 후 수정도 안된다! ~~콘솔창에 엄청난 에러메세지는 덤~~
+
+* iCloud 키체인에 대한 문제라고 한다
+
+* textField에 `textContentType` 값을 `oneTimeCode` 으로 설정해준다. 일회성 인증코드 같은거라고,,
+
+  ```swift
+  textfield.textContentType = .oneTimeCode
+  ```
+
+<img src="../Screenshots/pwderror1.png" alt="pwderror1" height="30%" width="30%;" /><img src="../Screenshots/pwderror2.png" alt="pwderror2" height="30%" width="30%;" />
+
+출처: https://fastutlego.tistory.com/86
+
+
+
+##### 2. 조건걸기: 숫자만 입력 #####
+
+* 아래 코드로 동작은 하는데 에러메세지가 떠서 맞는 방법인지 모르겠다
+
+```swift
+codeTextField.delegate = self // UITextFieldDelegate 추가
+```
+
+```swift
+func textField(_ textField: UITextField, shouldChangeCharactersIn range: NSRange, replacementString string: String) -> Bool {
+            let invalidCharacters = CharacterSet(charactersIn: "0123456789").inverted
+            return string.rangeOfCharacter(from: invalidCharacters) == nil
+        }
+```
+
+* 에러
+
+> Can't find keyplane that supports type 4 for keyboard iPhone-PortraitTruffle-NumberPad; using 25901_PortraitTruffle_iPhone-Simple-Pad_Default
+
+해결 방법으로 나오는 `I/O > Keyboard > Connect Hardware Keyboard 선택 해제` 이 방법으로 해결이 안된다,,
+
+코드 출처: https://medium.com/mobile-app-development-publication/making-ios-uitextfield-accept-number-only-4e9f569ae0c6
 
