update README.md & Assignment

--- a/TIL/day4-210930.md
+++ b/TIL/day4-210930.md
@@ -14,6 +14,9 @@ typora-copy-images-to: ../Screenshots
 
 ▶︎ [Xcode Tips: playground, 자동완성창 읽기](#-xcode-tips)
 
+▶︎ [Mission: 비밀번호 입력문제, 숫자만 입력되는 조건](#mission)
+
+
 
 
 ***
@@ -22,15 +25,11 @@ typora-copy-images-to: ../Screenshots
 
 ### ✔️ 옵셔널
 
-
-
 <br>
 
 <br>
 
 ### ✔️ Dictionary ###
-
-
 
  <br>
 
@@ -67,7 +66,7 @@ typora-copy-images-to: ../Screenshots
 
 ### 🔥Mission ###
 
-##### 1. 비밀번호 입력 #####
+##### 1. 비밀번호 입력 문제 #####
 
 * 비밀번호 입력이 안된다. 한 글자만 입력되고 아래 그림과 같이 'Strong Password'와 함께 색이 변한 후 수정도 안된다! ~~콘솔창에 엄청난 에러메세지는 덤~~
 
@@ -100,11 +99,25 @@ func textField(_ textField: UITextField, shouldChangeCharactersIn range: NSRange
         }
 ```
 
+코드 출처: https://medium.com/mobile-app-development-publication/making-ios-uitextfield-accept-number-only-4e9f569ae0c6
+
 * 에러
 
 > Can't find keyplane that supports type 4 for keyboard iPhone-PortraitTruffle-NumberPad; using 25901_PortraitTruffle_iPhone-Simple-Pad_Default
 
-해결 방법으로 나오는 `I/O > Keyboard > Connect Hardware Keyboard 선택 해제` 이 방법으로 해결이 안된다,,
+해결 방법으로 나오는 `I/O > Keyboard > Connect Hardware Keyboard 선택 해제` 이 방법으로 해결이 안된다,,  
 
-코드 출처: https://medium.com/mobile-app-development-publication/making-ios-uitextfield-accept-number-only-4e9f569ae0c6
+<br>
+
+* 단톡방에서 ''형변환을 이용해서 해결''하는 아주 간단한 방법을 말해주셨다🙃
+
+```swift
+let userCode = Int(codeTextField.text ?? "")
+
+if userCode != nil {
+            print("CODE: \(userCode ?? 0)")
+        } else {
+            print("숫자만 입력 가능")
+        }
+```
 
