--- a/TIL/day4-210930.md
+++ b/TIL/day4-210930.md
@@ -66,7 +66,7 @@ typora-copy-images-to: ../Screenshots
 
 ### 🔥Mission ###
 
-##### 1. 비밀번호 입력 문제 #####
+#### 1. 비밀번호 입력 문제 ####
 
 * 비밀번호 입력이 안된다. 한 글자만 입력되고 아래 그림과 같이 'Strong Password'와 함께 색이 변한 후 수정도 안된다! ~~콘솔창에 엄청난 에러메세지는 덤~~
 
@@ -80,11 +80,11 @@ typora-copy-images-to: ../Screenshots
 
 <img src="../Screenshots/pwderror1.png" alt="pwderror1" height="30%" width="30%;" /><img src="../Screenshots/pwderror2.png" alt="pwderror2" height="30%" width="30%;" />
 
-출처: https://fastutlego.tistory.com/86
+출처: https://fastutlego.tistory.com/86  
 
+<br>
 
-
-##### 2. 조건걸기: 숫자만 입력 #####
+#### 2. 조건걸기: 숫자만 입력 ####
 
 * 아래 코드로 동작은 하는데 에러메세지가 떠서 맞는 방법인지 모르겠다
 
