--- a/TIL/day4-210930.md
+++ b/TIL/day4-210930.md
@@ -109,7 +109,7 @@ func textField(_ textField: UITextField, shouldChangeCharactersIn range: NSRange
 
 <br>
 
-* 단톡방에서 ''형변환을 이용해서 해결''하는 아주 간단한 방법을 말해주셨다🙃
+* 단톡방에서 **형변환을 이용해서 해결**하는 아주 간단한 방법을 알려주셨다🙃
 
 ```swift
 let userCode = Int(codeTextField.text ?? "")
