--- a/TIL/day3-210929.md
+++ b/TIL/day3-210929.md
@@ -87,6 +87,7 @@
 3. __viewDidLoad__
    * 화면이 처음 만들어질 때 한 번만 실행된다
    * 리소스 초기화나 초기 화면 구성 용도로 주로 사용한다
+   * *Navigation Controller에서 view가 push될 때마다 viewDidLoad 호출된다* 
 4. __viewWillAppear__
    * View가 나타나기 직전에 실행
    * 다른 뷰로 이동했다가 다시 돌아올 때마다 호출된다
