--- a/TIL/day4-210930.md
+++ b/TIL/day4-210930.md
@@ -6,7 +6,7 @@
 
 ▶︎ [Set](#️-set)
 
-▶︎ [Tap Gesture Recognizer](#️-tap-gesture-recognizer)
+▶︎ [Tuple](#️-tuple)
 
 ▶︎ [Xcode Tips: playground, 자동완성창 읽기](#-xcode-tips)
 
@@ -17,9 +17,15 @@
 
 ***
 
+<img src="/Users/yangjiyeong/ssac2021/Screenshots/basic.jpeg" alt="basic" height="70%" width="70%;" />
 
+<br>
+
+<br>
 
 ### ✔️ 옵셔널
+
+<img src="/Users/yangjiyeong/ssac2021/Screenshots/optional.jpeg" alt="optional" height="50%" width="50%;"  />
 
 <br>
 
@@ -27,27 +33,40 @@
 
 ### ✔️ Dictionary ###
 
- <br>
+* key와 value로 구성 (.key와 .value로 접근)
+* key에 value가 종속되어 있어 key 삭제 시 value도 모두 사라진다
+* key는 순서가 있지만 value는 순서가 없다
+
+<br>
 
 <br>
 
 ### ✔️ Set ###
 
-
-
-<br>
-
-<br>
-
-### ✔️ Tap Gesture Recognizer ###
-
-
-
- <br>
+* 집합과 동일한 특성을 지닌다
+  * 집합 연산: `intersection`, `symmetricDifference`, `union`, `subtract`
+* 값들은 중복될 수 없다
+* 무조건 Set타입임을 명시해주어야 하는데 그렇지 않으면 배열로 타입추론한다
 
 <br>
 
 <br>
+
+### ✔️ Tuple
+
+* 다른 타입들을 담을 수 있는 자료형으로 어떤 형태든 마음대로 만들 수 있다
+* 인덱스가 존재하므로 순서가 있다
+* 한번 선언되면, 수정가 삭제가 불가능하다
+
+```swift
+var person = (1, true, 4.3, "jackson"m [0,2,3,1,2,3,4])
+person.1 // true
+person.0 + person.4[1] // 1 + 2 = 3
+```
+
+<br>
+
+<br><br>
 
 ### 💡 Xcode Tips ###
 
