--- a/TIL/day6-211005.md
+++ b/TIL/day6-211005.md
@@ -1,23 +1,31 @@
 # 🟢 Day6 TIL - 211005 🟢
 
-▶︎ [Git](#️-git)
+▶︎ [Git Status](#️-git-status)
 
 ▶︎ [Size Class](#️-size-class)
 
 ▶︎ [Navigation Controller](#️-navigation-controller)
-
-▶︎ [Xcode Tips: git 연동](#-xcode-tips)
-
-▶︎ [Mission](#mission)
-
-
 
 
 ***
 
 
 
-### ✔️ Git
+### ✔️ Git Status
+
+<img src="/Users/yangjiyeong/ssac2021/Screenshots/gitstatus.jpeg" alt="gitstatus" height="70%" width="70%;" />
+
+1. **Working Directory**
+   * Remote Repository(원격 저장소)에서 clone 받을 경우 해당 파일이 Working Directory가 된다
+   * 보통 .git Directory를 제외한 모든 것을 말한다
+   * **`modified`: 파일을 수정했지만 아직 Commit되지 않은 상태, 즉 git에 반영되지 않은 수정된 파일**
+2. **Staging Area** 
+   * Working Directory에서 수정된 파일을 Local Repository에 Commit하기 전, 커밋할 파일을 선택하는 곳이Staging Area
+   * **`staged`: 수정한 파일을 곧 Commit할 것이라고 표시해놓은 상태**
+
+3. **Local Repository**
+   + Commit되어 파일을 버전별로 관리할 수 있는 영역으로, Staging Area에 있는 파일을 Commit하여 Repository에 영구적인 **스냅샷**으로 저장한다
+   + **`commited`: staged된 파일이 안전하게 저장된 상태, 이 파일들은 다시 Working Directory로 돌아간다**
 
 <br>
 
@@ -25,19 +33,33 @@
 
 ### ✔️ Size Class ###
 
- <br>
+* 모든 화면에 대한 레이아웃을 대응해도 되지만 비효율적이기 때문에 Size Class를 통해 구현한다
+* Size classes are traits that are automatically assigned to content areas based on their size
+* As with other environmental variations, iOS dynamically makes layout adjustments based on the size classes of a content area
+* 4가지 조합으로 구성
+  * Regular width, regular height
+  * Compact width, compact height
+  * Regular width, compact height
+  * Compact width, regular height
+
+* **Device별 확인**
+  > https://developer.apple.com/design/human-interface-guidelines/ios/visual-design/adaptivity-and-layout/
+
+* `Xcode13` 은 Navigation Controller 에서 각 Size Class에 해당하는 UI를 별도로 구성할 수 있다
+
+<img src="/Users/yangjiyeong/ssac2021/Screenshots/xcode13nc.png" alt="xcode13nc" height="30%" width="30%;" />
+
+<br>
 
 <br>
 
 ### ✔️ Navigation Controller ###
 
-<br>
+* 드릴다운 & 수직적 (Tabbar Controller는 수평적)
+
+<img src="/Users/yangjiyeong/ssac2021/Screenshots/nav.jpeg" alt="nav" height="70%" width="70%;"  />
 
 <br>
-
-<br>
-
-### 💡 Xcode Tips ###
 
 <br>
 
