--- a/TIL/day6-211005.md
+++ b/TIL/day6-211005.md
@@ -13,7 +13,7 @@
 
 ### ✔️ Git Status
 
-<img src="/Users/yangjiyeong/ssac2021/Screenshots/gitstatus.jpeg" alt="gitstatus" height="70%" width="70%;" />
+<img src="../Screenshots/gitstatus.jpeg" alt="gitstatus" height="70%" width="70%;" />
 
 1. **Working Directory**
    * Remote Repository(원격 저장소)에서 clone 받을 경우 해당 파일이 Working Directory가 된다
@@ -47,7 +47,7 @@
 
 * `Xcode13` 은 Navigation Controller 에서 각 Size Class에 해당하는 UI를 별도로 구성할 수 있다
 
-<img src="/Users/yangjiyeong/ssac2021/Screenshots/xcode13nc.png" alt="xcode13nc" height="30%" width="30%;" />
+<img src="../Screenshots/xcode13nc.png" alt="xcode13nc" height="30%" width="30%;" />
 
 <br>
 
@@ -57,7 +57,7 @@
 
 * 드릴다운 & 수직적 (Tabbar Controller는 수평적)
 
-<img src="/Users/yangjiyeong/ssac2021/Screenshots/nav.jpeg" alt="nav" height="70%" width="70%;"  />
+<img src="../Screenshots/nav.jpeg" alt="nav" height="70%" width="70%;"  />
 
 <br>
 
