--- a/TIL/day4-210930.md
+++ b/TIL/day4-210930.md
@@ -17,7 +17,7 @@
 
 ***
 
-<img src="/Users/yangjiyeong/ssac2021/Screenshots/basic.jpeg" alt="basic" height="70%" width="70%;" />
+<img src="../Screenshots/basic.jpeg" alt="basic" height="70%" width="70%;" />
 
 <br>
 
@@ -25,7 +25,7 @@
 
 ### ✔️ 옵셔널
 
-<img src="/Users/yangjiyeong/ssac2021/Screenshots/optional.jpeg" alt="optional" height="50%" width="50%;"  />
+<img src="../Screenshots/optional.jpeg" alt="optional" height="50%" width="50%;"  />
 
 <br>
 
