--- a/TIL/day6-211005.md
+++ b/TIL/day6-211005.md
@@ -68,7 +68,7 @@
 
 ### ✔️ ViewController LifeCycle 실습
 
-* [이전 개념정리](#../TIL/day3-210929.md)
+* [이전 개념정리](../TIL/day3-210929.md)
 
 * #### 처음 화면 만들어질 때
 
