--- a/TIL/day6-211005.md
+++ b/TIL/day6-211005.md
@@ -74,10 +74,10 @@
 
 <img src="../Screenshots/lc01.png" alt="lc01" height="60%" width="60%;"  />
 
-* #### Tab간의 이동할 때
+* #### 처음 보는 Tab으로 이동할 때
 
   ```
-  1. 이전 Tab: WillDisappear //
+  1. 이전 Tab: WillDisappear
   2. 현재 Tab: DidLoad //
   3. 현재 Tab: WillAppear
   4. 이전 Tab: DidDisappear
@@ -86,14 +86,16 @@
 
 <img src="../Screenshots/lc03.png" alt="lc03" height="60%" width="60%;" />
 
-* #### 다른 Tab에서 Root Tab으로 이동할 때
+* #### 한번 만들어졌던 Tab으로 이동할 때
 
   ```
-  1. Root Tab: WillAppear //
-  2. 이전 Tab: WillDisappear //
+  1. 현재 Tab: WillAppear 
+  2. 이전 Tab: WillDisappear 
   3. 이전 Tab: DidDisappear
-  4. Root Tab: DidAppear
+  4. 현재 Tab: DidAppear
   ```
+
+  * **Tab은 처음에 만들어진 후에는 다시 `viewDidLoad` 하지 않는다**
 
 <img src="../Screenshots/lc04.png" alt="lc04" height="60%" width="60%;" />
 
@@ -101,7 +103,7 @@
 
   ```
   1. 현재 Push: DidLoad //
-  2. 이전 화면: WillDisappear //
+  2. 이전 화면: WillDisappear 
   3. 현재 Push: WillAppear
   4. 이전 화면: DidDisappear
   5. 현재 Push: DidAppear
@@ -112,13 +114,22 @@
 * #### Push에서 돌아올때
 
   ```
-  1. 이전 Push: WillDisappear //
-  2. 현재 화면: WillAppear //
+  1. 이전 Push: WillDisappear 
+  2. 현재 화면: WillAppear 
   3. 이전 Push: DidDisappear
   4. 현재 화면: DidAppear
   ```
 
+  	* FirstView --`push`--> SecondView --`push`--> **ThirdView --`back`--> SecondView --`back`--> FirstView**
+  	* **`back` 하는 상황에서 되돌아오는 현재 화면들(Second, FirstView)은 `viewDidLoad` 하지 않는다**
+
 <img src="../Screenshots/lc07.png" alt="lc07" height="60%" width="60%;" />
+
+
+
+
+
+
 
 * #### Modal
 
@@ -127,6 +138,8 @@
   2. Modal 화면: WillAppear
   3. Modal 화면: DidAppear
   ```
+
+  		* Modal로 들어가기 이전에 화면은 `willDisappear`, `didDisappear` 하지 않는다
 
 <img src="../Screenshots/lc08.png" alt="lc08" height="60%" width="60%;" />
 
@@ -137,16 +150,11 @@
   2. Modal 화면: DidDisappear
   ```
 
+  		* 돌아온 현재 화면에 대해 `viewDidLoad`, `willApear`, `didAppear` 하지 않는다
+
 <img src="../Screenshots/lc10.png" alt="lc10" height="60%" width="60%;" />
 
 <br>
-
-* #### Tabbar vs. Navigation(Push)
-
-|           | Tabbar                                        | Navigation(Push)                                |
-| --------- | --------------------------------------------- | ----------------------------------------------- |
-| 이동할 때 | - 이전 탭 willDisappear <br>- 현재 탭 didLoad | - 현재 Push didLoad<br>- 이전 뷰 willDisappear  |
-| 돌아올 때 | - Root willAppear<br/>- 이전 탭 willDisappear | - 이전 Push willDisappear<br/>- Root willAppear |
 
 <br>
 
