--- a/TIL/day8-211007.md
+++ b/TIL/day8-211007.md
@@ -1,63 +1,131 @@
 # 🟢 Day8 TIL - 211007 🟢
 
-▶︎ [UIWindow와 ViewController LifeCycle](#️-uiwindow와-viewcontroller-lifecycle)
+▶︎ [Class](#️-class)
 
-▶︎ [SwiftPM으로 라이브러리 사용하기](#️-swiftpm으로-라이브러리-사용하기)
+▶︎ [Struct](#️-struct)
 
-▶︎ [User Defaults](#️-user-defaults)
-
-▶︎ [Navigation Controller](#️-navigation-controller)
-
-
+▶︎ [Class vs Struct](#️-class-vs-struct)
 
 
 ***
 
-### ✔️ UIWindow와 ViewController LifeCycle
+### ✔️ Class
 
-<img src="../Screenshots/uiwindow.jpeg" alt="uiwindow" height="50%" width="50%;" />
+* #### 클래스와 인스턴스
 
-* UIWindow : UIView의 하위클래스로 뷰 계층의 최상위에 위치하며 여러 view들의 컨테이너 역할을 한다
+  * 클래스가 인스턴스를 생성하기 위해선 프로퍼티들이 모두 초기화되어 있어야 한다
+  * 초기화는 초기화 구문(init)을 통해 parameter를 넣어 프로퍼티를 초기화한다
+  * 프로퍼티를 `옵셔널`로 선언하면 초기화 구문이 없어도 에러는 뜨지 않지만 런타임에러 발생할 수도 있다
 
+  ```swift
+  class Monster {
+      // Property
+      var clothes: String
+      var speed: Int
+      var power: Int
+      var exp: Double
+      // Method
+      func attack() {
+          print("몬스터 공격")
+      }
+      // Initializer
+      init(clothes : String, speed: Int, power: Int, exp: Double) {
+          self.clothes = clothes
+          self.speed = speed
+          self.power = power
+          self.exp = exp
+      }
+  }
+  // 인스턴스 생성
+  var easyMonster = Monster(clothes: "Orange", speed: 1, power: 10, exp: 50.0)
+  var hardMonster = Monster(clothes: "Blue", speed: 10, power: 500, exp: 10000)
+  ```
 
+  <br>
 
-### ✔️ SwiftPM으로 라이브러리 사용하기
+* #### 상속과 재정의
 
-<img src="../Screenshots/spm1.png" alt="spm1" height="70%" width="70%;" />
+  * 상속받은 멤버를 재정의하면 앞에 `override` 키워드가 붙는다
+  * 재정의하면서 부모클래스 특성도 함께 사용하고 싶을 때, `super` 프로퍼티를 사용한다
 
-<img src="../Screenshots/spm2.png" alt="spm2" height="70%" width="70%;" />
-
-<img src="../Screenshots/spm3.png" alt="spm3" height="70%" width="70%;" />
-
-<img src="../Screenshots/spm4.png" alt="spm4" height="70%" width="70%;" />
-
-* 오픈 소스의 README에서 설명하는 사용법에 따라 사용한다
-
-<br>
-
-<br>
-
-### ✔️ User Defaults ###
-
-<img src="../Screenshots/savingdata.png" alt="savingdata" height="50%" width="50%;" />
-
-* .plist 형태로 저장되어 앱을 종료하더라도 데이터가 유지된다
-
-* 싱글톤 인스턴스다
-
-* 저장할 수 있는 값은 Int, Double, Float, String, Bool, Data와 이로 이루어진 Array, Dictionary
-
-* 커스텀 클래스의 경우 NSKeyedArchiever 등을 사용해 Data로 전환한 뒤에 저장해야한다
-
-* ```swift
-  //Setting Default Values
-  //UserDefaults.standard.set(value, forKey: "CustomKey")
-  let userText = mottoTextField.text ?? "열심히 살자"
-  UserDefaults.standard.set(userText, forKey: "userMotto")
+  ```swift
+  // Monster: 부모클래스, BossMonster: 자식클래스
+  class BossMonster: Monster {
+      // 새 프로퍼티 정의
+      var bossName = "끝판왕보스"
+      // 메서드 재정의
+      override func attack() {
+          super.attack()
+          print("보스몬스터 공격")	
+      }
+  }
   
-  //Getting Default Values
-  //UserDefaults.standard.value(forKey: "CustomKey")
-  let userMotto = UserDefaults.standard.string(forKey: "userMotto")
+  var boss = BossMonster(clothes: "Black", speed: 100, power: 50000, exp: 200000)
+  boss.attack() // 몬스터 공격, 보스몬스터 공격
+  ```
+
+  <br>
+
+  <br>
+
+### ✔️ Struct
+
+* 클래스와 달리 초기화 구문을 자동으로 제공하는데 이를 `멤버와이즈 초기화 구문` 이라고 한다. 따라서 init 초기화 구문을 작성할 필요가 없다
+
+```swift
+struct Monster {
+    // Property
+    var clothes: String
+    var speed: Int
+    var power: Int
+    var exp: Double
+    // Method
+    func attack() {
+        print("몬스터 공격")
+    }
+}
+// 인스턴스 생성
+var easyMonster = Monster(clothes: "Orange", speed: 1, power: 10, exp: 50.0)
+var hardMonster = Monster(clothes: "Blue", speed: 10, power: 500, exp: 10000)
+```
+
+<br>
+
+<br>
+
+### ✔️ Class vs Struct ###
+
+* Class는 상속이 가능하지만, Struct는 상속할 수 없다
+
+* Class는 `init`이 필요하지만, Struct는 `Memberwise Initializer` 를 자동으로 제공한다
+
+* Class는 `Reference Type`이고, Struct는 ` Value Type`이다
+
+  `Reference` : 주소가 전달, 기존의 인스턴스 참조를 전달 -> 값이 저장되어 있는 곳을 공통으로 사용
+
+  `Value` : 전달될 값이 복사되어 전달, 메모리에 인스턴스가 새로 생성되고 생성된 새 인스턴스에 전달하려는 값 복사되어 들어감 -> 구조체 인스턴스를 다른 변수에 대입할 경우, 기존 인스턴스와 독립적으로 동작
+
+  ```swift
+  var hardStepBoss = SuperBoss(name: "쉬운보스", level: 1, power: 10)
+  var easyStepBoss = hardStepBoss
+  
+  hardStepBoss.power = 50000
+  hardStepBoss.level = 100
+  hardStepBoss.name = "어려운 보스"
+  ```
+
+  * **Class** SuperBoss
+
+  ```swift
+  print(hardStepBoss.name, hardStepBoss.level, hardStepBoss.power) // 어려운 보스 100 50000
+  print(easyStepBoss.name, easyStepBoss.level, easyStepBoss.power) // 어려운 보스 100 50000
+  ```
+
+  * **Struct** SuperBoss
+
+  ```swift
+  print(hardStepBoss.name, hardStepBoss.level, hardStepBoss.power) // 어려운 보스 100 50000
+  print(easyStepBoss.name, easyStepBoss.level, easyStepBoss.power) // 쉬운 보스 1 10
   ```
 
 <br>
