--- a/TIL/day8-211007.md
+++ b/TIL/day8-211007.md
@@ -101,9 +101,11 @@ var hardMonster = Monster(clothes: "Blue", speed: 10, power: 500, exp: 10000)
 
 * Class는 `Reference Type`이고, Struct는 ` Value Type`이다
 
-  `Reference` : 주소가 전달, 기존의 인스턴스 참조를 전달 -> 값이 저장되어 있는 곳을 공통으로 사용
+  - [x] `Reference Type` : 주소가 전달, 기존의 인스턴스 참조를 전달 -> 값이 저장되어 있는 곳을 공통으로 사용
 
-  `Value` : 전달될 값이 복사되어 전달, 메모리에 인스턴스가 새로 생성되고 생성된 새 인스턴스에 전달하려는 값 복사되어 들어감 -> 구조체 인스턴스를 다른 변수에 대입할 경우, 기존 인스턴스와 독립적으로 동작
+  - [x] `Value Type` : 전달될 값이 복사되어 전달, 메모리에 인스턴스가 새로 생성되고 생성된 새 인스턴스에 전달하려는 값 복사되어 들어감 -> 구조체 인스턴스를 다른 변수에 대입할 경우, 기존 인스턴스와 독립적으로 동작
+
+  <br>
 
   ```swift
   var hardStepBoss = SuperBoss(name: "쉬운보스", level: 1, power: 10)
