update README.md & Assignment

--- a/TIL/day8-211007.md
+++ b/TIL/day8-211007.md
@@ -6,8 +6,12 @@
 
 ▶︎ [Class vs Struct](#️-class-vs-struct)
 
+▶︎ [DateFormatter](#️-dateformatter)
+
 
 ***
+
+<br>
 
 ### ✔️ Class
 
@@ -19,15 +23,18 @@
 
   ```swift
   class Monster {
+    
       // Property
       var clothes: String
       var speed: Int
       var power: Int
       var exp: Double
+    
       // Method
       func attack() {
           print("몬스터 공격")
       }
+    
       // Initializer
       init(clothes : String, speed: Int, power: Int, exp: Double) {
           self.clothes = clothes
@@ -36,9 +43,11 @@
           self.exp = exp
       }
   }
+  
   // 인스턴스 생성
   var easyMonster = Monster(clothes: "Orange", speed: 1, power: 10, exp: 50.0)
   var hardMonster = Monster(clothes: "Blue", speed: 10, power: 500, exp: 10000)
+  
   ```
 
   <br>
@@ -51,8 +60,10 @@
   ```swift
   // Monster: 부모클래스, BossMonster: 자식클래스
   class BossMonster: Monster {
+    
       // 새 프로퍼티 정의
       var bossName = "끝판왕보스"
+    
       // 메서드 재정의
       override func attack() {
           super.attack()
@@ -65,7 +76,7 @@
   ```
 
   <br>
-
+  
   <br>
 
 ### ✔️ Struct
@@ -74,16 +85,19 @@
 
 ```swift
 struct Monster {
+  
     // Property
     var clothes: String
     var speed: Int
     var power: Int
     var exp: Double
+  
     // Method
     func attack() {
         print("몬스터 공격")
     }
 }
+
 // 인스턴스 생성
 var easyMonster = Monster(clothes: "Orange", speed: 1, power: 10, exp: 50.0)
 var hardMonster = Monster(clothes: "Blue", speed: 10, power: 500, exp: 10000)
@@ -119,16 +133,54 @@ var hardMonster = Monster(clothes: "Blue", speed: 10, power: 500, exp: 10000)
   * **Class** SuperBoss
 
   ```swift
+  // Class
   print(hardStepBoss.name, hardStepBoss.level, hardStepBoss.power) // 어려운 보스 100 50000
   print(easyStepBoss.name, easyStepBoss.level, easyStepBoss.power) // 어려운 보스 100 50000
   ```
-
+  
   * **Struct** SuperBoss
-
+  
   ```swift
+  // Struct
   print(hardStepBoss.name, hardStepBoss.level, hardStepBoss.power) // 어려운 보스 100 50000
   print(easyStepBoss.name, easyStepBoss.level, easyStepBoss.power) // 쉬운 보스 1 10
   ```
+
+<br>
+
+<br>
+
+### ✔️ DateFormatter
+
+* `Date` 구조체는 **날짜의 한 지점**을 나타내고 이것을 **텍스트로 표현**하고 싶을 때 `DateFormatter`를 사용한다
+* **인스턴스화** 시켜 사용한다
+* String으로부터 Date를 얻어오는 것도 가능해지는데, 이 때 String이 DateFormatter의 형식과 맞지 않을 경우에는 nil을 리턴해야하므로 반환형이 **Optional**
+
+```swift
+var date = Date()
+let format = DateFormatter()	// 인스턴스화
+format.dateFormat = "yyyy년 MM월 dd일"
+print(format.string(from: date))
+```
+
+<br>
+
+* dateFormat
+
+| dateformat |                                                              |
+| ---------- | ------------------------------------------------------------ |
+| **a**      | am/pm<br>Locale(identifier: "ko")                            |
+| **e**      | 요일<br>갯수에 따라 월, 월요일, 주간요일순서를 숫자로 표현, Locale(identifier: "ko") |
+| **y**      | 년                                                           |
+| **M**      | 월                                                           |
+| **d**      | 일<br>Locale(identifier: "ko")                               |
+| **D**      | 365일 중 일                                                  |
+| **H**      | 시 (24시)                                                    |
+| **h**      | 시 (12시)                                                    |
+| **m**      | 분                                                           |
+| **s**      | 초                                                           |
+
+[출처1](https://medium.com/@Alpaca_iOSStudy/날짜-다루기-b008fa101da), [출처2](https://nsios.tistory.com/18)
 
 <br>
 
