update README.md & Assignment

--- a/TIL/day4-210930.md
+++ b/TIL/day4-210930.md
@@ -13,9 +13,9 @@
 ▶︎ [Mission: 비밀번호 입력문제, 숫자만 입력되는 조건](#mission)
 
 
-
-
 ***
+
+<br>
 
 <img src="../Screenshots/basic.jpeg" alt="basic" height="70%" width="70%;" />
 
@@ -23,7 +23,7 @@
 
 <br>
 
-### ✔️ 옵셔널
+## ✔️ 옵셔널
 
 <img src="../Screenshots/optional.jpeg" alt="optional" height="50%" width="50%;"  />
 
@@ -31,7 +31,7 @@
 
 <br>
 
-### ✔️ Dictionary ###
+## ✔️ Dictionary ##
 
 * key와 value로 구성 (.key와 .value로 접근)
 * key에 value가 종속되어 있어 key 삭제 시 value도 모두 사라진다
@@ -41,7 +41,7 @@
 
 <br>
 
-### ✔️ Set ###
+## ✔️ Set ##
 
 * 집합과 동일한 특성을 지닌다
   * 집합 연산: `intersection`, `symmetricDifference`, `union`, `subtract`
@@ -52,7 +52,7 @@
 
 <br>
 
-### ✔️ Tuple
+## ✔️ Tuple
 
 * 다른 타입들을 담을 수 있는 자료형으로 어떤 형태든 마음대로 만들 수 있다
 * 인덱스가 존재하므로 순서가 있다
@@ -66,9 +66,9 @@ person.0 + person.4[1] // 1 + 2 = 3
 
 <br>
 
-<br><br>
+<br>
 
-### 💡 Xcode Tips ###
+## 💡 Xcode Tips ##
 
 * playground 재생 단축키 : `shift` + `Enter`
 * Xcode 자동완성창 읽기
@@ -81,9 +81,9 @@ person.0 + person.4[1] // 1 + 2 = 3
 
 <br>
 
-### 🔥Mission ###
+## 🔥Mission ##
 
-#### 1. 비밀번호 입력 문제 ####
+### 1. 비밀번호 입력 문제 ###
 
 * 비밀번호 입력이 안된다. 한 글자만 입력되고 아래 그림과 같이 'Strong Password'와 함께 색이 변한 후 수정도 안된다! ~~콘솔창에 엄청난 에러메세지는 덤~~
 
@@ -101,7 +101,7 @@ person.0 + person.4[1] // 1 + 2 = 3
 
 <br>
 
-#### 2. 조건걸기: 숫자만 입력 ####
+### 2. 조건걸기: 숫자만 입력 ###
 
 * 아래 코드로 동작은 하는데 에러메세지가 떠서 맞는 방법인지 모르겠다
 
