--- a/TIL/day6-211005.md
+++ b/TIL/day6-211005.md
@@ -11,9 +11,9 @@
 
 ***
 
+<br>
 
-
-### ✔️ Git Status
+## ✔️ Git Status
 
 <img src="../Screenshots/gitstatus.jpeg" alt="gitstatus" height="70%" width="70%;" />
 
@@ -33,7 +33,7 @@
 
 <br>
 
-### ✔️ Size Class ###
+## ✔️ Size Class ##
 
 * 모든 화면에 대한 레이아웃을 대응해도 되지만 비효율적이기 때문에 Size Class를 통해 구현한다
 * Size classes are traits that are automatically assigned to content areas based on their size
@@ -56,7 +56,7 @@
 
 <br>
 
-### ✔️ Navigation Controller ###
+## ✔️ Navigation Controller ##
 
 * 드릴다운 & 수직적 (Tabbar Controller는 수평적)
 
@@ -66,15 +66,17 @@
 
 <br>
 
-### ✔️ ViewController LifeCycle 실습
+## ✔️ ViewController LifeCycle 실습
 
 * [이전 개념정리](../TIL/day3-210929.md)
 
-* #### 처음 화면 만들어질 때
+* ### 처음 화면 만들어질 때
 
 <img src="../Screenshots/lc01.png" alt="lc01" height="60%" width="60%;"  />
 
-* #### 처음 보는 Tab으로 이동할 때
+<br>
+
+* ### 처음 보는 Tab으로 이동할 때
 
   ```
   1. 이전 Tab: WillDisappear
@@ -86,7 +88,9 @@
 
 <img src="../Screenshots/lc03.png" alt="lc03" height="60%" width="60%;" />
 
-* #### 한번 만들어졌던 Tab으로 이동할 때
+<br>
+
+* ### 한번 만들어졌던 Tab으로 이동할 때
 
   ```
   1. 현재 Tab: WillAppear 
@@ -99,7 +103,9 @@
 
 <img src="../Screenshots/lc04.png" alt="lc04" height="60%" width="60%;" />
 
-* #### Push
+<br>
+
+* ### Push
 
   ```
   1. 현재 Push: DidLoad //
@@ -111,7 +117,9 @@
 
 <img src="../Screenshots/lc06.png" alt="lc06" height="60%" width="60%;" />
 
-* #### Push에서 돌아올때
+<br>
+
+* ### Push에서 돌아올때
 
   ```
   1. 이전 Push: WillDisappear 
@@ -120,18 +128,14 @@
   4. 현재 화면: DidAppear
   ```
 
-  	* FirstView --`push`--> SecondView --`push`--> **ThirdView --`back`--> SecondView --`back`--> FirstView**
-  	* **`back` 하는 상황에서 되돌아오는 현재 화면들(Second, FirstView)은 `viewDidLoad` 하지 않는다**
+  * FirstView --`push`--> SecondView --`push`--> **ThirdView --`back`--> SecondView --`back`--> FirstView**
+  * **`back` 하는 상황에서 되돌아오는 현재 화면들(Second, FirstView)은 `viewDidLoad` 하지 않는다**
 
 <img src="../Screenshots/lc07.png" alt="lc07" height="60%" width="60%;" />
 
+<br>
 
-
-
-
-
-
-* #### Modal
+* ### Modal
 
   ```
   1. Modal 화면: DidLoad
@@ -139,18 +143,20 @@
   3. Modal 화면: DidAppear
   ```
 
-  		* Modal로 들어가기 이전에 화면은 `willDisappear`, `didDisappear` 하지 않는다
+  	* Modal로 들어가기 이전에 화면은 `willDisappear`, `didDisappear` 하지 않는다
 
 <img src="../Screenshots/lc08.png" alt="lc08" height="60%" width="60%;" />
 
-* #### Modal에서 돌아올 때
+<br>
+
+* ### Modal에서 돌아올 때
 
   ```
   1. Modal 화면: WillDisappear
   2. Modal 화면: DidDisappear
   ```
 
-  		* 돌아온 현재 화면에 대해 `viewDidLoad`, `willApear`, `didAppear` 하지 않는다
+  	* 돌아온 현재 화면에 대해 `viewDidLoad`, `willApear`, `didAppear` 하지 않는다
 
 <img src="../Screenshots/lc10.png" alt="lc10" height="60%" width="60%;" />
 
