--- a/TIL/day7-211006.md
+++ b/TIL/day7-211006.md
@@ -9,19 +9,21 @@
 ▶︎ [Navigation Controller](#️-navigation-controller)
 
 
-
-
 ***
 
-### ✔️ UIWindow와 ViewController LifeCycle
+<br>
+
+## ✔️ UIWindow와 ViewController LifeCycle
 
 <img src="../Screenshots/uiwindow.jpeg" alt="uiwindow" height="50%" width="50%;" />
 
 * UIWindow : UIView의 하위클래스로 뷰 계층의 최상위에 위치하며 여러 view들의 컨테이너 역할을 한다
 
+<br>
 
+<br>
 
-### ✔️ SwiftPM으로 라이브러리 사용하기
+## ✔️ SwiftPM으로 라이브러리 사용하기
 
 <img src="../Screenshots/spm1.png" alt="spm1" height="70%" width="70%;" />
 
@@ -37,7 +39,7 @@
 
 <br>
 
-### ✔️ User Defaults ###
+## ✔️ User Defaults ##
 
 <img src="../Screenshots/savingdata.png" alt="savingdata" height="50%" width="50%;" />
 
