--- a/TIL/day3-210929.md
+++ b/TIL/day3-210929.md
@@ -14,11 +14,11 @@
 
 ***
 
+<br>
 
+## ✔️ 버전 대응
 
-### ✔️ 버전 대응
-
- - **최소 버전을 iOS 12.0 이상으로 설정한 경우 오류**
+ - #### **최소 버전을 iOS 12.0 이상으로 설정한 경우 오류**
 
    1. `AppDelegate` 파일을 확인해보면 버전 13 이후로 생긴 함수들에 대해 오류가 뜨고, `SceneDelegate`은 버전 13 때 생긴거라 모든 함수에서 에러가 뜬다.
 
@@ -30,7 +30,7 @@
 
 <br>
 
- - **해결방법**
+ - #### **해결방법**
 
    1. 필요한 부분 위(함수, 클래스 모두 가능)에 아래 코드를 적어준다.
 
@@ -64,7 +64,7 @@
 
 <br>
 
-### ✔️ Mac Catalyst ###
+## ✔️ Mac Catalyst ##
 
 * `Mac Catalyst` 를 사용하면 iPad앱을 Mac앱으로 쉽게 전환가능하다. (iPhone 앱은 불가능)
 * 기존에는 AppKit, UIKit, TVUIKit, WatchKit 프레임워크로 각각 개발하였는데, 이를 모두 합친 것이 `SwiftUI` 이다. M1칩 이후 더 많이 사용될 것이라고 한다.
@@ -74,7 +74,7 @@
 
 <br>
 
-### ✔️ ViewController LifeCycle ###
+## ✔️ ViewController LifeCycle ##
 
 ​	<img src="../Screenshots/vclifecycle.jpg" alt="vclifecycle" height="30%" width="30%;" />
 
@@ -106,7 +106,7 @@
 
 <br>
 
-### ✔️ iOS 계층구조 ###
+## ✔️ iOS 계층구조 ##
 
 * **Cocoa Touch** : 최상위 레벨의 프레임워크로 UIKit을 포함
 * **Media** : 파일, 음악
@@ -117,9 +117,7 @@
 
 <br>
 
-<br>
-
-### ❕Xcode Tips ###
+## ❕Xcode Tips ##
 
 * 디버깅 단축키 정리  ~~(Fn키는 설정에서 변경)~~
   * ctrl + cmd + y : 다음 브레이크포인트로 이동
