--- a/TIL/day8-211007.md
+++ b/TIL/day8-211007.md
@@ -13,9 +13,9 @@
 
 <br>
 
-### ✔️ Class
+## ✔️ Class
 
-* #### 클래스와 인스턴스
+* ### 클래스와 인스턴스
 
   * 클래스가 인스턴스를 생성하기 위해선 프로퍼티들이 모두 초기화되어 있어야 한다
   * 초기화는 초기화 구문(init)을 통해 parameter를 넣어 프로퍼티를 초기화한다
@@ -52,7 +52,7 @@
 
   <br>
 
-* #### 상속과 재정의
+* ### 상속과 재정의
 
   * 상속받은 멤버를 재정의하면 앞에 `override` 키워드가 붙는다
   * 재정의하면서 부모클래스 특성도 함께 사용하고 싶을 때, `super` 프로퍼티를 사용한다
@@ -79,7 +79,7 @@
   
   <br>
 
-### ✔️ Struct
+## ✔️ Struct
 
 * 클래스와 달리 초기화 구문을 자동으로 제공하는데 이를 `멤버와이즈 초기화 구문` 이라고 한다. 따라서 init 초기화 구문을 작성할 필요가 없다
 
@@ -107,7 +107,7 @@ var hardMonster = Monster(clothes: "Blue", speed: 10, power: 500, exp: 10000)
 
 <br>
 
-### ✔️ Class vs Struct ###
+## ✔️ Class vs Struct ##
 
 * Class는 상속이 가능하지만, Struct는 상속할 수 없다
 
@@ -150,7 +150,7 @@ var hardMonster = Monster(clothes: "Blue", speed: 10, power: 500, exp: 10000)
 
 <br>
 
-### ✔️ DateFormatter
+## ✔️ DateFormatter
 
 * `Date` 구조체는 **날짜의 한 지점**을 나타내고 이것을 **텍스트로 표현**하고 싶을 때 `DateFormatter`를 사용한다
 * **인스턴스화** 시켜 사용한다
@@ -162,8 +162,6 @@ let format = DateFormatter()	// 인스턴스화
 format.dateFormat = "yyyy년 MM월 dd일"
 print(format.string(from: date))
 ```
-
-<br>
 
 * dateFormat
 
