--- a/TIL/day10-211012.md
+++ b/TIL/day10-211012.md
@@ -13,23 +13,100 @@
 
 ## ✔️ Optional Binding
 
+```swift
+enum UserMissionStatus: String {
+    case missionFailed = "실패"
+    case missionSucceed = "성공"
+}
+```
+
 * ### if let
 
-  * 
-  
+  ```swift
+  func checkNumber1(number: Int?) -> (UserMissionStatus, Int?) {
+      if let value = number {
+          return (.missionSucceed, value)
+      } else {
+          return (.missionFailed, nil)
+      }
+  }
+  ```
+
+  * number의 옵셔널이 해제됐을때 아래 내용 실행
+  * if 구문이기 때문에 **value는 if 중괄호 안에서만 사용 가능**
+
   <br>
-  
+
 * ### guard
 
-  * 
+  * number가 옵셔널이면 else 구문 실행 -> `Early Exit`
+  * guard let 구문에서  **value는 중괄호 밖에서도 사용 가능**
+
+  ```swift
+  func checkNumber2(number: Int?) -> (UserMissionStatus, Int?) {
+      guard let value = number else {
+          return (.missionFailed, nil)
+      }
+      return (.missionSucceed, value)
+  }
+  ```
+
+  * cellForRowAt에서의 사용 예
+
+  ```swift
+  override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
+          
+          // 타입 캐스팅, if let으로도 변경 가능
+          guard let cell = tableView.dequeueReusableCell(withIdentifier: "BoxOfficeTableViewCell", for: indexPath) as? BoxOfficeTableViewCell else {
+              return UITableViewCell()
+          }
+          cell.titleLabel.text = "듄"
+          cell.releaseLabel.text = "2021.10.20"
+         
+          return cell
+      }
+  ```
 
   <br>
-  
+
   <br>
 
 ## ✔️ Optinal Chaining
 
-* 
+* 옵셔널을 반복 사용
+
+* 중첩된 옵셔널 중 하나라도 값이 존재하지 않으면 nil 반환
+
+* 옵셔널 체이닝의 반환된 값은 항상 옵셔널
+
+  ```swift
+  override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
+          
+          let cell = tableView.dequeueReusableCell(withIdentifier: "memoCell")
+          // 옵셔널 체이닝
+          cell?.textLabel?.text = list[indexPath.row]
+          cell?.textLabel?.textColor = .brown
+          cell?.textLabel?.font = .italicSystemFont(ofSize: 13)
+          
+          return cell
+      }
+  ```
+
+  * 옵셔널 바인딩과 옵셔널 체이닝 결합
+
+  ```swift
+  override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
+         // 옵셔널 바인딩
+          guard let cell = tableView.dequeueReusableCell(withIdentifier: "memoCell") else {
+              return UITableViewCell()
+          }
+          cell.textLabel?.text = list[indexPath.row]
+          cell.textLabel?.textColor = .brown
+          cell.textLabel?.font = .italicSystemFont(ofSize: 13)
+          
+          return cell   
+      }
+  ```
 
 <br>
 
@@ -37,6 +114,22 @@
 
 ## ✔️ TableViewCell Reuse mechanism
 
-* 
+* `dequeueReusableCell`
+
+* 메모리 관리를 위해 모든 cell을 다 메모리에 저장해놓는 대 화면에 표시할 만큼의 셀만 큐에 저장한다. 화면에 새 셀이 나타나려고 할 때 셀이 큐에서 빠져나와 cellForRowAt 메서드에서 customized된 후 테이블 뷰에 삽입된다
+
+  > 1. 테이블뷰 및 컬렉션뷰에서 셀을 표시하기 위해 데이터 소스에 뷰(셀) 인스턴스를 요청합니다.
+  >
+  > 2. 데이터 소스는 요청마다 새로운 셀을 만드는 대신 **재사용 큐 (Reuse Queue)**에 재사용을 위해 대기하고있는 셀이 있는지 확인 후 있으면 그 셀에 새로운 데이터를 설정하고, 없으면 새로운 셀을 생성합니다.
+  >
+  > 3. 테이블뷰 및 컬렉션뷰는 데이터 소스가 셀을 반환하면 화면에 표시합니다.
+  >
+  > 4. 사용자가 스크롤을 하게 되면 일부 셀들이 화면 밖으로 사라지면서 다시 재사용 큐에 들어갑니다.
+  >
+  > 5. 위의 1번부터 4번까지의 과정이 계속 반복됩니다.
+
+<img src="/Users/yangjiyeong/ssac2021/Screenshots/reuseprocess.png" height="80%" width="80%;" />
+
+[출처](https://fluffy.es/solve-duplicated-cells/)
 
 <br><br>
