--- a/TIL/day10-211012.md
+++ b/TIL/day10-211012.md
@@ -128,7 +128,7 @@ enum UserMissionStatus: String {
   >
   > 5. 위의 1번부터 4번까지의 과정이 계속 반복됩니다.
 
-<img src="/Users/yangjiyeong/ssac2021/Screenshots/reuseprocess.png" height="80%" width="80%;" />
+<img src="../Screenshots/reuseprocess.png" height="80%" width="80%;" />
 
 [출처](https://fluffy.es/solve-duplicated-cells/)
 
