--- a/TIL/day13-211015.md
+++ b/TIL/day13-211015.md
@@ -15,7 +15,7 @@
 
 * list는 구조체를 담고 있는 배열이고 UserDefaults는 기본 자료형 밖에 담지 못하므로 저장하거나 tableView에 보여줄 때 자료형을 변경해주어야 한다
 
-<img src="/Users/yangjiyeong/ssac2021/Screenshots/memolist.png" height="40%" width="40%;" />
+<img src="../Screenshots/memolist.png" height="40%" width="40%;" />
 
 ```swift
 var list = [Memo]() {
@@ -62,7 +62,7 @@ struct Memo {
     >
     > 3. memo로 유저디폴트 만들고 테이블뷰 리로드
 
-<img src="../Screenshots/savedata.png" height="80%" width="80%;" />
+<img src="../Screenshots/savedata.png" height="60%" width="60%;" />
 
 * loadData()
 
@@ -74,7 +74,7 @@ struct Memo {
     > 2. list에 넣을 memo 배열 변수 선언
     > 3. 유저디폴트에서 category, content 가져와서 Memo타입으로 다시 만들어준 후 memo배열
 
-<img src="../Screenshots/loaddata.png" height="80%" width="80%;" />
+<img src="../Screenshots/loaddata.png" height="60%" width="60%;" />
 
 
 
