--- a/TIL/day12-211014.md
+++ b/TIL/day12-211014.md
@@ -17,6 +17,33 @@
 
 * ### static
 
+  * 누군가 나를 불러줬을 때 한번 메모리에 올라가고, 그 뒤로는 어디서든 해당 프로퍼티를 "공유" 하는 형태
+  * 따라서 인스턴스 만들어서 사용하는게 아니라 바로 클래스에서 접근 가능하다
+  * 공통적인 요소를 공유해서 사용하고 싶을 때 사용한다
+
+  ```swift
+  class User {
+      static let nickname = "고래밥"
+      static var totalOrderCount = 0 {
+          didSet {
+              print("총 주문 횟수: \(oldValue) -> \(totalOrderCount)로 증가")
+          }
+      }
+      static var orderProduct: Int {
+          get {
+              return totalOrderCount // 지금까지 몇개 주문했는지 가져오기
+          }
+          set {
+              totalOrderCount += newValue
+          }
+      }
+  }
+  
+  User.nickname	// 인스턴스 만들지 않고 바로 클래스로 접근
+  User.orderProduct = 10	
+  User.totalOrderCount	// 10
+  ```
+
 
 <br>
 
@@ -26,6 +53,21 @@
 
 * ### mutating
 
+  * **struct와 enum**은 `value type`이기 때문에 이들의 프로퍼티들은 해당 인스턴스 메소드 내에서 수정할 수 없다
+  * 따라서 프로퍼티값을 인스턴스 메스드 내에서 변경하게 될 경우 `mutating`을 붙여준다
+
+  ```swift
+  struct Point {
+      var x = 0.0
+      var y = 0.0
+      
+      mutating func moveBy(x: Double, y: Double) {
+          self.x += x
+          self.y += y
+      }
+  }
+  ```
+
 <br>
 
 <br>
@@ -34,6 +76,35 @@
 
 * ### static vs class
 
+  * 타입 메서드를 상속받아 재정의 하고 싶을 경우, 부모 클래스에서 타입 메서드를 선언할 때 static이 아니라 class를 쓰면 재정의 할 수 있음
+
+  ```swift
+  class Coffee {
+      static var name = "아메리카노"
+      static var shot = 2
+      
+      // 상속 받았을때 오버라이딩 안됨
+      static func plusShot() {
+          shot += 1
+      }
+      
+      // 오버라이딩 가능
+      class func minusShot() {
+          shot -= 1
+      }
+      
+      func hello() {
+          
+      }
+  }
+  
+  class Latte: Coffee {
+      override class func minusShot() {
+          print("latte minus shot")
+      }
+  }
+  ```
+
 
 <br>
 
@@ -41,6 +112,43 @@
 
 ## ✔️ Signleton Pattern
 
+* 해당 클래스에 대한 인스턴스를 최초 생성 시 한 번만 생성해 전역에 두고, 이후로는 이 인스턴스에 대해 모든 클래스에서 접근 가능하게 하는 것
 
+```swift
+class UserDefaultsHelper {
+    // 자기자신을 만들어서 직접 접근
+    static let shared = UserDefaultsHelper()
+    
+    let userDefualts = UserDefaults.standard
+    
+    enum Key: String {
+        case nickname, age, rate
+    }
+    
+    var userNickname: String? {
+        get {
+            return userDefualts.string(forKey: Key.nickname.rawValue)
+        }
+        set {
+            userDefualts.set(newValue, forKey: Key.nickname.rawValue)
+        }
+    }
+    
+    var userAge: Int? {
+        get {
+            return userDefualts.integer(forKey: Key.age.rawValue)
+        }
+        set {
+            userDefualts.set(newValue, forKey: Key.age.rawValue)
+        }
+    }
+    
+    // 인스턴스 생성 막기
+    private init() { }
+}
+// 접근 방법
+UserDefaultsHelper.shared.userNickname = "고래밥"
+UserDefaultsHelper.shared.userAge = 15
+```
 
 <br><br>
