--- a/Exercise/SeSAC_06Week/SeSAC_06Week/ja.lproj/Main.strings
+++ b/Exercise/SeSAC_06Week/SeSAC_06Week/ja.lproj/Main.strings
@@ -1,6 +1,6 @@
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "Oqj-5U-6kI"; */
-"Oqj-5U-6kI.text" = "Label";
+"Oqj-5U-6kI.text" = "일본어테스트";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "QxV-QA-C2J"; */
-"QxV-QA-C2J.text" = "Label";
+"QxV-QA-C2J.text" = "일본어입니다";
