--- a/Exercise/SeSAC_06Week/SeSAC_06Week/ko.lproj/Main.strings
+++ b/Exercise/SeSAC_06Week/SeSAC_06Week/ko.lproj/Main.strings
@@ -1,3 +1,4 @@
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "QxV-QA-C2J"; */
-"QxV-QA-C2J.text" = "Label";
+"QxV-QA-C2J.text" = "한국어테스트";
+"Oqj-5U-6kI.text" = "안녕하세요";
