--- a/Exercise/SeSAC_06Week/SeSAC_06Week/Localization/en.lproj/Localizable.strings
+++ b/Exercise/SeSAC_06Week/SeSAC_06Week/Localization/en.lproj/Localizable.strings
@@ -5,3 +5,8 @@
   Created by 지영 on 2021/11/01.
   
 */
+
+"tab_home" = "Home";
+"tab_setting" = "Setting";
+
+"welcome_text" = "Hello! Nice to meet you";
